// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormAppend is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormAppend testClass1 testClass2 css-14xvn4g-side-uncompressed-euiTestCss"
  data-test-subj="test subject string"
>
  <label
    class="euiFormLabel emotion-euiFormLabel"
  >
    Label
  </label>
</div>
`;

exports[`EuiFormAppendPrepend is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormAppend testClass1 testClass2 css-14xvn4g-side-uncompressed-euiTestCss"
  data-test-subj="test subject string"
>
  <label
    class="euiFormLabel emotion-euiFormLabel"
  >
    Label
  </label>
</div>
`;

exports[`EuiFormPrepend is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormPrepend testClass1 testClass2 css-14xvn4g-side-uncompressed-euiTestCss"
  data-test-subj="test subject string"
>
  <label
    class="euiFormLabel emotion-euiFormLabel"
  >
    Label
  </label>
</div>
`;
